# gewe-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  config.toml  dist-workspace.toml
config/prompts/: ai_system.txt
crates/gewe-bot-app/: Cargo.toml  README.md  start-dev.sh
crates/gewe-bot-app/migrations/: 001_init_schema.sql
crates/gewe-bot-app/src/: config.rs  dispatcher.rs  lib.rs  main.rs
crates/gewe-bot-app/src/api/: auth.rs  config.rs  mod.rs  pages.rs  prompts.rs  state.rs
crates/gewe-bot-app/src/storage/: factory.rs  file.rs  mod.rs  postgres.rs
crates/gewe-bot-app/src/tools/: claude_changelog.rs  gemini_image.rs  http_request.rs  mod.rs  tool_versions.rs
crates/gewe-cli/: Cargo.toml
crates/gewe-cli/src/: config.rs  contact.rs  favorite.rs  group.rs  login.rs  main.rs  moments.rs  personal.rs  tag.rs  video_account.rs  wait_reply.rs  webhook.rs
crates/gewe-cli/src/message/: download.rs  forward.rs  mod.rs  revoke.rs  send.rs
crates/gewe-cli/tests/: cli_integration.rs  config_integration.rs
crates/gewe-core/: Cargo.toml
crates/gewe-core/src/: common.rs  lib.rs  login.rs
crates/gewe-core/src/contact/: info.rs  manage.rs  mod.rs  wecom.rs
crates/gewe-core/src/favorite/: mod.rs
crates/gewe-core/src/group/: admin.rs  manage.rs  member.rs  mod.rs  settings.rs
crates/gewe-core/src/message/: download.rs  forward.rs  revoke.rs  send.rs
crates/gewe-core/src/moments/: interact.rs  manage.rs  media.rs  mod.rs  publish.rs  settings.rs  timeline.rs
crates/gewe-core/src/personal/: mod.rs  profile.rs  safety.rs  settings.rs
crates/gewe-core/src/tag/: mod.rs
crates/gewe-core/src/video_account/: common.rs  follow.rs  interact.rs  message.rs  mod.rs  profile.rs  publish.rs  scan.rs  search.rs
crates/gewe-grpc/: Cargo.toml
crates/gewe-grpc/src/: lib.rs
crates/gewe-http/: Cargo.toml
crates/gewe-http/src/: client.rs  favorite.rs  lib.rs  login.rs  tag.rs
crates/gewe-http/src/contact/: info.rs  manage.rs  mod.rs  wecom.rs
crates/gewe-http/src/group/: admin.rs  manage.rs  member.rs  mod.rs  settings.rs
crates/gewe-http/src/message/: download.rs  forward.rs  mod.rs  revoke.rs  send.rs
crates/gewe-http/src/moments/: interact.rs  manage.rs  media.rs  mod.rs  publish.rs  settings.rs  timeline.rs
crates/gewe-http/src/personal/: mod.rs  profile.rs  safety.rs  settings.rs
crates/gewe-http/src/video_account/: follow.rs  interact.rs  message.rs  mod.rs  profile.rs  publish.rs  scan.rs  search.rs
crates/gewe-session/: Cargo.toml
crates/gewe-session/src/: lib.rs
crates/gewe-tauri/: Cargo.toml
crates/gewe-tauri/src/: lib.rs
crates/gewe-web/: Cargo.toml
crates/gewe-web/src/: lib.rs
crates/gewe-webhook/: Cargo.toml
crates/gewe-webhook/src/: lib.rs
docs/: README.md  USAGE.md  index.json  wait-reply-design.md
docs/GeweAPI-Official/个人资料模块/: 修改头像.md  获取自己的二维码.md  获取设备记录.md
docs/GeweAPI-Official/开发指南/: 开发前必读.md  消息订阅.md
docs/GeweAPI-Official/收藏夹模块/: 删除收藏夹.md
docs/GeweAPI-Official/朋友圈模块/: 下载朋友圈视频.md  发送图片朋友圈.md  发送文字朋友圈.md  发送视频朋友圈.md  发送链接朋友圈.md  联系人的朋友圈列表.md  自己的朋友圈列表.md  设置朋友圈可见范围.md  设置某条朋友圈为隐私-公开.md  评论-删除评论.md
docs/GeweAPI-Official/标签模块/: 删除标签.md  标签列表.md  添加标签.md
docs/GeweAPI-Official/消息模块/: cdn下载.md  下载emoji.md  下载图片.md  下载文件.md  发送appmsg消息.md  发送名片消息.md  发送小程序消息.md  发送文字消息.md  发送视频消息.md  回调消息详解.md  撤回消息.md  转发图片.md  转发小程序.md  转发文件.md  转发视频.md  转发链接.md
docs/GeweAPI-Official/登录模块/: 弹框登录.md  执行登录(步骤2).md  设置回调地址.md
docs/GeweAPI-Official/系统功能/: 断线重连.md  检查是否在线.md
docs/GeweAPI-Official/群模块/: 修改我在群内的昵称.md  修改群备注.md  删除群成员.md  同意进群.md  扫码进群.md  添加群成员为好友.md  管理员操作.md  群保存到通讯录.md  聊天置顶.md  获取群二维码.md  获取群信息.md  获取群公告.md  获取群成员详情.md  解散群聊.md  设置消息免打扰.md  设置群公告.md  退出群聊.md
docs/GeweAPI-Official/联系人模块/: 上传手机通讯录.md  删除好友.md  搜索企微.md  搜索好友.md  检测好友关系.md  获取群-好友简要信息.md  获取通讯录列表.md  设置好友仅聊天.md
docs/GeweAPI-Official/视频号模块/: 上传CDN视频.md  修改我的视频号信息.md  关注.md  关注列表.md  发送视频号朋友圈.md  发送视频号消息.md  我的视频号二维码.md  扫码点赞.md  搜索并关注.md  根据id点小红心.md  根据id点赞.md  浏览.md  用户主页.md
docs/config/: bot-config-v2.example.toml
docs/design/: frontend-config-console.md
docs/examples/: auto_reply_clash.md  download_image.md  favorite_sync.md  fetch_contacts_list.md  get_profile.md  invite_members_with_reason.md  manage_labels.md  multi_bot_login.md  rule_examples.md  send_mini_app.md  send_moment_text.md  send_text_alias.md  send_voice.md  video_account_publish.md  webhook_setup.md
docs/tasks/: 00-project-guide.md  01-backend-api-phase1.md  02-frontend-htmx-plan.md  03-phase2-completion.md  03-phase2-starter-prompt.md  04-all-phases-completion.md  05-postgres-readiness-report.md  frontend-config-console.md
docs/个人资料模块/: 修改个人信息.md  获取个人资料.md  隐私设置.md
docs/开发指南/: 常见问题.md  接入排查参考.md  接入流程.md
docs/收藏夹模块/: 同步收藏夹.md  获取收藏夹内容.md
docs/朋友圈模块/: 上传朋友圈图片.md  上传朋友圈视频.md  删除朋友圈.md  是否允许陌生人查看朋友圈.md  某条朋友圈详情.md  点赞-取消点赞.md  转发朋友圈.md
docs/标签模块/: 修改好友标签.md
docs/消息模块/: 下载视频.md  下载语音.md  发送emoji消息.md  发送图片消息.md  发送文件消息.md  发送语音消息.md  发送链接消息.md  转发小程序.md
docs/登录模块/: 获取登录二维码(步骤1).md  账号密码登录.md
docs/系统功能/: Mac转ipad接口.md  退出.md
docs/群模块/: 修改群名称.md  创建微信群.md  确认进群申请.md  获取群成员列表.md  邀请-添加 进群.md
docs/联系人模块/: 同步企微好友.md  添加企微好友.md  添加联系人-同意添加好友.md  获取企微好友详情.md  获取手机通讯录.md  获取群-好友详细信息.md  获取通讯录列表缓存.md  设置好友备注.md
docs/视频号模块/: 创建视频号.md  发布CDN视频.md  发布视频-新.md  发私信图片消息.md  发私信文本消息.md  同步私信消息.md  延迟点赞、小红心.md  扫码关注.md  扫码浏览.md  扫码点小红心.md  扫码登录视频号助手.md  扫码获取视频详情.md  扫码评论.md  搜索视频号.md  消息列表.md  获取我的视频号信息.md  获取私信人信息.md  获取赞与收藏的视频列表.md  评论.md  评论列表.md
docs/账号规范/: 账号规范之养号.md  账号规范之解封.md  账号规范之风险.md
frontend/: .gitkeep
patches/rig-core-0.24.0/: .cargo_vcs_info.json  Cargo.toml
patches/rig-core-0.24.0/src/providers/gemini/: completion.rs
