[workspace]
resolver = "2"
members = [
    "crates/gewe-core",
    "crates/gewe-session",
    "crates/gewe-http",
    "crates/gewe-webhook",
    "crates/gewe-grpc",
    "crates/gewe-cli",
    "crates/gewe-tauri",
    "crates/gewe-web",
    "crates/gewe-bot-app",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"
authors = ["wangnov <wangnov69@gmail.com>"]
repository = "https://github.com/wangnov/gewe-rs"
homepage = "https://github.com/wangnov/gewe-rs"
keywords = ["wechat", "gewe", "bot", "sdk"]
categories = ["api-bindings"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "fs", "io-util", "process", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "brotli", "gzip"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "compression-gzip", "compression-br", "cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "chrono", "uuid", "sqlite", "postgres", "migrate"] }
redis = { version = "0.26", features = ["tokio-comp"] }
toml = "0.8"
directories = "5.0"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

