[package]
name = "gewe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line tool for WeChat operations via gewe API"
keywords = ["wechat", "gewe", "cli", "bot"]
categories = ["command-line-utilities"]

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
gewe-http = { path = "../gewe-http", version = "0.1" }
gewe-core = { path = "../gewe-core", version = "0.1" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
