[package]
name = "gewe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line tool for WeChat operations via gewe API"
keywords = ["wechat", "gewe", "cli", "bot"]
categories = ["command-line-utilities"]

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
gewe-http = { path = "../gewe-http", version = "0.1" }
gewe-core = { path = "../gewe-core", version = "0.1" }
gewe-webhook = { path = "../gewe-webhook", version = "0.1" }
gewe-session = { path = "../gewe-session", version = "0.1" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.8"

[dev-dependencies]
tempfile = "3.15"
