[package]
name = "gewe-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "gRPC support for gewe WeChat SDK"
keywords = ["wechat", "gewe", "grpc"]
categories = ["api-bindings"]
publish = false

[dependencies]
gewe-core = { path = "../gewe-core" }
