[package]
name = "gewe-session"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Session management for gewe WeChat SDK"
keywords = ["wechat", "gewe", "session", "storage"]
categories = ["api-bindings"]
publish = false

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
gewe-core = { path = "../gewe-core" }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[features]
default = ["memory"]
memory = []
sqlite = ["sqlx", "sqlx/sqlite", "sqlx/runtime-tokio-rustls"]
redis-store = ["redis"]
