[package]
name = "gewe-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Web application for gewe WeChat management panel"
keywords = ["wechat", "gewe", "web", "panel"]
categories = ["web-programming"]
publish = false

[dependencies]
gewe-core = { path = "../gewe-core" }
